--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,8 +1,5 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CD
 
-# Controls when the workflow will run
 on:
   workflow_run:
     workflows: ["ci"]
@@ -10,18 +7,13 @@ on:
     types: 
       - completed
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  deploy:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
+    steps:          
+      - name: Check out
+        uses: actions/checkout@v2
+          
       - uses: actions/setup-python@v2
         with:
           python-version: '3.6.12'
@@ -34,3 +26,13 @@ jobs:
 
       - name: run pipeline to kubeflow
         run: python kubeflow_pipeline/pipeline.py
+
+      - name: Slack Notification
+        if: always()
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_ICON_EMOJI: ':bell:'
+          SLACK_CHANNEL: mnist-project
+          SLACK_MESSAGE: 'Upload & Run pipeline :rocket: - ${{job.status}}'
+          SLACK_USERNAME: Github
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
