--- a/kubeflow_pipeline/deploy/Dockerfile
+++ b/kubeflow_pipeline/deploy/Dockerfile
@@ -1,8 +1,5 @@
 FROM pytorch/torchserve:0.3.0-cpu
-
 COPY . /app
 WORKDIR /app
-RUN pip install -U numpy faiss-cpu==1.6.1 ujson
-ENTRYPOINT ["python"]
-CMD ["run.py"]
-   
+RUN pip install -r docker_requirements.txt
+ENTRYPOINT ["python", "run.py"]
