--- a/kubeflow_pipeline/train_faiss/Dockerfile
+++ b/kubeflow_pipeline/train_faiss/Dockerfile
@@ -2,5 +2,4 @@ FROM python:3.7
 COPY . /app
 WORKDIR /app
 RUN pip install -U numpy faiss-cpu==1.6.1 ujson
-ENTRYPOINT ["python"]
-CMD ["run.py"]
+ENTRYPOINT ["python", "run.py"]
